# cinnamon-ai-bootcamp-w1

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.pre-commit.md  pyproject.toml
.github/workflows/: python-app.yaml
llamagon_ocr_script/: cloud_uploader.py  file_handler.py  main.py  ocr_parser.py
output/Quant Simulation Research/: Quant Simulation Research.json
output/Screenshot 2024-01-04 211444/: Screenshot 2024-01-04 211444.json
tests/: dummy_path.json  mypath.py  test_file_handler.py  test_ocr_parser.py
tests/test_files/: test.heic
tests/test_files/test/: test.json
