[tool.poetry]
name = "cinnamon-ai-bootcamp-w1"
version = "0.1.0"
description = ""
authors = ["Viet Bach Tran <tvbbd2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
paddleocr = "^2.7.3"
numpy = "1.24.4"
pdf2image = "^1.17.0"
pillow-heif = "^0.16.0"
pytest = "^8.2.2"
pre-commit = "^3.7.1"
google-auth = "^2.31.0"
google-auth-oauthlib = "^1.2.0"
google-api-python-client = "^2.135.0"
google-auth-httplib2 = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
