[tool.poetry]
name = "llamagon-ocr-script"
version = "0.1.0"
description = "The OCR script to draw bounding boxes and read text lines from documents (.pdf, .doc, etc.)"
authors = ["Viet Bach Tran <tvbbd2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
google-api-python-client = "^2.135.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
python-dotenv = "^1.0.1"
paddlepaddle = "^2.6.1"
paddleocr = ">=2.0.1"
pymupdf = "1.21.1"
numpy = "1.26.4"
opencv-python = "^4.10.0.84"
pillow = "^10.3.0"
pillow-heif = "^0.16.0"
pdf2image = "^1.17.0"
pre-commit = "^3.7.1"
pypandoc = "^1.13"
docx2pdf = "^0.1.8"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = ["poetry.core.masonry.api", "setuptools.build_meta"]
